--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "csv": "^5.3.2",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
