--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,6 +38,6 @@ jobs:
     - name: JSDoc Action
       uses: andstor/jsdoc-action@v1.2.0
       with:
-        source_dir: ./js
+        source_dir: /js
         recurse: true
-        output_dir: ./out
+        output_dir: /out
